# persian_pyramids

./: .gitattributes  CMakeLists.txt  Camera.cpp  Camera.hpp  LICENSE  Mesh.hpp  Model3D.cpp  Model3D.hpp  README.md  Shader.cpp  Shader.hpp  ShaderG.cpp  ShaderG.hpp  SkyBox.cpp  SkyBox.hpp  SurveillanceCamera .h  main (1).cpp  main.cpp
shaders/: alternateCameraShader.frag  alternateCameraShader.vert  depthMapShader.frag  depthMapShader.vert  depthPointShader.geom  depthPointShader.vert  lightCube.vert  lighting.frag  lighting.vert  screenQuad.frag  screenQuad.vert  shaderStart.frag  start.frag  start.vert  water.frag  water.vert
